fixed proxy setting, adjusted endpoint that show monthly income/expense stats to be more detailed
